PSoC Creator Workspace Folder/SeatPM_Project.cydsn/REBUILD.log
--------------- Rebuild Started: 09/04/2020 12:50:39 Project: SeatPM_Project, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\acceleration_vector.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\accelerometer.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\adxl345.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\moving_average_filter.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\goniometer.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\emergency_stop.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\motor.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cpm_runtime.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\runtime.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\screen.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\user_interface.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\parameter.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C_MASTER.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_AsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Decrement_ISR.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Increment_ISR.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Back_ISR.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Confirm_ISR.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Decrement.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Decrement_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Increment.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Increment_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Back.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Back_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Confirm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_Confirm_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Clock_100Hz.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_Clock.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_PWM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_PWM_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_sda.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_sda_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_scl.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_scl_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_SCB_IRQ.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CPM_Runtime_Timer.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CPM_Runtime_Timer_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CPM_Runtime_Timer_Interrupt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_ADC.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_ADC_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_ADC_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_Direction.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_Direction_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_OutputB.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_OutputB_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_OutputA.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Motor_OutputA_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_Input.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_Input_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_ADC_IRQ.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Potentiometer_ADC_intClock.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_EmergencyStop_Left.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_EmergencyStop_Left_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_EmergencyStop_Right_Interrupt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_EmergencyStop_Right.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_EmergencyStop_Right_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Button_EmergencyStop_Left_Interrupt.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SeatPM_Project.hex"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SeatPM_Project.elf"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\SeatPM_Project.map"
Deleting file ".\SeatPM_Project.cycdx"
Deleting file ".\SeatPM_Project.svd"
Deleting file ".\SeatPM_Project.rpt"
Deleting file ".\SeatPM_Project_timing.html"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\go4ar\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\go4ar\Desktop\SeatPM\PSoC Creator Workspace Folder\SeatPM_Project.cydsn\SeatPM_Project.cyprj" -d CY8C4245AXI-483 -s "C:\Users\go4ar\Desktop\SeatPM\PSoC Creator Workspace Folder\SeatPM_Project.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0061: information: Info from component: Potentiometer_ADC. The actual sample rate (62500 SPS) differs from the desired sample rate (70312 SPS) due to the clock configuration in the DWR.
 * C:\Users\go4ar\Desktop\SeatPM\PSoC Creator Workspace Folder\SeatPM_Project.cydsn\TopDesign\TopDesign.cysch (Instance:Potentiometer_ADC)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb "-I.\Source Code" "-I.\Source Code\Components" "-I.\Source Code\Components\Goniometer" "-I.\Source Code\Components\Goniometer\Acceleration Vector" "-I.\Source Code\Components\Goniometer\Accelerometer" "-I.\Source Code\Components\Goniometer\ADXL345" "-I.\Source Code\Components\Goniometer\Moving Average Filter" "-I.\Source Code\Components\Motor" "-I.\Source Code\Components\Motor\Emergency Stop" "-I.\Source Code\Components\User Interface" "-I.\Source Code\Components\User Interface\Runtime" "-I.\Source Code\Components\User Interface\Runtime\CPM Runtime" "-I.\Source Code\Components\User Interface\Finite State Machine" "-I.\Source Code\Components\User Interface\User Interface Buttons" "-I.\Source Code\Data Models" "-I.\Source Code\Data Models\Parameter" "-I.\Source Code\Macros" -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Os -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
In file included from main.c:27:0:
.\Source Code\Components\User Interface/user_interface.h:71:18: error: 'MESSAGE_ROWS' undeclared here (not in a function)
     char Message[MESSAGE_ROWS][MESSAGE_CHARACTERS_PER_ROW + 1];
                  ^
.\Source Code\Components\User Interface/user_interface.h:71:32: error: 'MESSAGE_CHARACTERS_PER_ROW' undeclared here (not in a function)
     char Message[MESSAGE_ROWS][MESSAGE_CHARACTERS_PER_ROW + 1];
                                ^
main.c:28:64: fatal error: user_interface_buttons.h: No such file or directory
compilation terminated.
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 09/04/2020 12:50:51 ---------------
